--- a/css/social_buttons.css
+++ b/css/social_buttons.css
@@ -1,19 +1,36 @@
-.social {
+#me{
+  border-style: outset;
+  border-width: thin;
+  border-color: inherit;
+  width: 10em;
+  height: 10em;
+  border-radius: 50%;
+  position: relative;
+}
+
+.social{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin-left: 1em;
+}
+
+.icons {
   padding-bottom: 3em;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  width: 50%;
   transition: opacity 400ms ease;
 }
 
-.social:hover{
+.icons:hover{
   cursor: pointer;
   opacity: 1;
 }
 
-.social a {
+.icons a {
     color: inherit;
     text-decoration: none;
   }
