--- a/css/general.css
+++ b/css/general.css
@@ -3,12 +3,19 @@ html, body{
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .vol{
   position: fixed;
   bottom: 1.5em;
   right: 1.5em;
+}
+
+.backgrnd{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #front{
@@ -25,6 +32,20 @@ html, body{
   position: absolute;
 }
 
+.video{
+  padding: 1em 1em;
+}
+
+iframe{
+  border-color: #595959;
+  width: 100%;
+  height: 100%;
+}
+
+/*#work{
+  background-color: #f2f2f2;
+}*/
+
 ul{
   text-decoration: underline;
 }
@@ -38,10 +59,12 @@ a{
 }
 
 .end{
-  justify-content: flex-start;
-  align-content:center;
+  background-color: #e6e6e6;
+  padding: 2em 1em;
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+  align-content:center;
   width: 100%;
   flex-wrap: wrap;
 }
