--- a/css/general.css
+++ b/css/general.css
@@ -8,63 +8,83 @@ html, body{
 
 .vol{
   position: fixed;
-  bottom: 1.5em;
-  right: 1.5em;
+  bottom: 1.5vh;
+  right: 1.5vw;
+  z-index: 99;
 }
 
 .backgrnd{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
+  height: 700px;
+  width: 700px;
+}
+
+.bordered{
+  background-color:#0d0d0d;
+  border-color:#666666;
+  border-top-style: inset;
+  border-bottom-style: outset;
+  border-right-style: outset;
+  border-left-style: inset;
+  border-width: 0.1vmax;
+  border-collapse: collapse;
 }
 
 #front{
   display: flex;
   height: 100%;
   width: 100%;
+  /*padding: 2vh 2vw;*/
   overflow: hidden;
   justify-content: center;
   align-items: center;
 }
 
 #name{
-  margin-left: -30em;
+  margin-left: -30vw;
   position: absolute;
 }
 
 .video{
-  padding: 1em 1em;
+  padding: 2vh 1vh 0;
 }
 
 iframe{
-  border-color: #595959;
   width: 100%;
   height: 100%;
+  border-style: groove;
+  border-collapse: collapse;
+  border-width: 0.12vw;
+  border-color: #595959;
 }
 
-/*#work{
-  background-color: #f2f2f2;
-}*/
+#work{
+  width: 100%;
+  height: 100%;
+  padding: 1vh 1vw;
+}
 
 ul{
   text-decoration: underline;
 }
 
 li{
-  padding-left: 1em;
+  padding-left: 1vw;
 }
 
 a{
   color: inherit;
 }
 
-.end{
-  background-color: #e6e6e6;
-  padding: 2em 1em;
+#end{
+  /*margin-top: 3em;*/
+  padding: 2vh 0 0;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-content:center;
+  justify-content:center;
+  align-content:flex-end;
   width: 100%;
   flex-wrap: wrap;
+  background: #e6e6e6;
+  border-color:#bfbfbf;
 }
