--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,6 +1,6 @@
 .parallax-effect {
-  -webkit-perspective: 300px;
-  perspective: 300px;
+  -webkit-perspective: 200px;
+  perspective: 200px;
   perspective-origin-x: 100%;
   height: 100vh;
   overflow-x: hidden;
@@ -10,13 +10,16 @@
 .parallax_group {
   position: relative;
   height: 100vh;
+  -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   /*transform: translate3d(700px, 0, -800px) rotateY(30deg);*/
 }
 
 .parallax_layer {
   position: absolute;
-  transform-origin-x: 100%;
+  -webkit-transform-origin-x: center;
+  transform-origin-x: center;
+  /*height: 100%;*/
   top: 0;
   right: 0;
   bottom: 0;
@@ -24,22 +27,26 @@
 }
 
 .parallax_layer-base {
+  -webkit-transform: translateZ(0);
   transform: translateZ(0);
   z-index: 4;
 }
 
 .parallax_layer-back {
-  transform: translateZ(-300px) scale(2);
+  -webkit-transform: translateZ(-100px) scale(1.5);
+  transform: translateZ(-100px) scale(1.5);
   z-index: 3;
 }
 
 .parallax_layer-deep{
-  transform: translateZ(-600px) scale(3);
+  -webkit-transform: translateZ(-200px) scale(2);
+  transform: translateZ(-200px) scale(2);
   z-index: 2;
 }
 
 .parallax_layer-fore {
-  transform: translateZ(80px) scale(.7);
+  -webkit-transform: translateZ(20px) scale(0.9);
+  transform: translateZ(20px) scale(0.9);
   z-index: 1;
 }
 
