--- a/css/social_buttons.css
+++ b/css/social_buttons.css
@@ -13,12 +13,12 @@
   flex-direction: column;
   align-items: center;
   width: 50%;
-  margin-left: 1em;
+  /*margin-left: 6vh;*/
 }
 
 .icons {
   opacity: 0.5;
-  padding-bottom: 3em;
+  padding-bottom: 8vh;
   display: flex;
   flex-direction: row;
   align-items: center;
